--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "vue-cli-service serve && ESLINT=NO",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
-    "vux": "^2.9.4"
+    "vux": "^2.9.4",
+    "es6-promise": "^4.2.8",
+    "whatwg-fetch": "^3.0.0",
+    "qs": "^6.9.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.1",
     "@vue/cli-plugin-vuex": "^4.1.1",
     "@vue/cli-service": "^4.1.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
     "standard": "^14.3.1",
     "vue-template-compiler": "^2.6.10"
   },
@@ -30,14 +31,6 @@
     "root": true,
     "env": {
       "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
     }
   },
   "browserslist": [
