--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
+    "mockjs": "^1.1.0",
+    "qs": "^6.9.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
-    "vux": "^2.9.4",
-    "es6-promise": "^4.2.8",
-    "whatwg-fetch": "^3.0.0",
-    "qs": "^6.9.0"
+    "vux": "^2.9.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
